--- a/Backend/findmypet/src/main/resources/application.properties
+++ b/Backend/findmypet/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+
+
+#Join url
+app.frontend.join-url=http://localhost:8080/api/v1/invitations/join/
