Docker compose hinzugefügt und application properties angepasst.
Datenbank ist jetzt eine Postgres Datenbank die über Docker läuft.

--- a/Implementation/findmypet/src/main/resources/application.properties
+++ b/Implementation/findmypet/src/main/resources/application.properties
@@ -1,16 +1,37 @@
 spring.application.name=findmypet
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+
+
+######################################
+#Alte Datenbank
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+######################################
+
+
+
+# Postgres config
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgresDB
+spring.datasource.username=epm
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#JPA
+# spring.jpa.hibernate.ddl-auto=create-drop         ##Falls sich das Datenbankschema sich ändert dies ein mal ausführen lassen beim start anstatt spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 
